--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,49 @@
 /*  your css code here. If applicable */
+body{
+    background-color : #f5f5f5; 
+    width: 100%;
+}
+.contain{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 10px 20px;
+}
+.header{
+    background-color : #011e29;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    margin: 5px;
+}
+.latest-news-section{
+    background-color: #fff;
+    padding: 10px;
+    width: 30%;
+    height: 200px;
+    border-radius: 20px;
+    text-align: center;
+    
+}
+.main{
+    background-color: #fff;
+    border-radius: 20px;
+	width:40%;
+    height: 300px;
+    text-align: center;
+    margin: 0px 5px;
+    padding: 10px;
+}
+img{
+	width: 180px;
+    height: 150px;
+}
+.pictorial-news-section{
+    background-color: #fff;
+    padding: 5px;
+    width: 30%;
+    height: auto;
+    text-align: center;
+    border-radius: 20px;
+
+}
