--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*  your css code here. If applicable */
-body{
-    background-color : #f5f5f5; 
+header{
+    background-color: #f5f5f5; 
     width: 100%;
 }
 .contain{
